--- a/ecommerce-website/src/App.css
+++ b/ecommerce-website/src/App.css
@@ -20,3 +20,20 @@
 .App-link {
   color: #09d3ac;
 }
+
+.btn-black{
+  background: transparent;
+  font-size: 0.8rem;
+  color:black;
+  border-radius: 0;
+  border: 0.1 rem solid black; 
+}
+.btn-black:hover{
+  background: black;
+  color:white;
+}
+.cart-icon{
+  cursor:pointer;
+  font-size:1.2rem;
+  /*color:*/
+}
